--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "core-js": "^2.6.5",
     "popper.js": "^1.15.0",
     "vue": "^2.6.10",
+    "vue-material-design-icons": "^3.4.0",
     "vue-popperjs": "^2.1.0",
     "vue-router": "^3.1.3"
   },
