--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "vue": "^2.6.10",
     "vue-material-design-icons": "^3.4.0",
     "vue-popperjs": "^2.1.0",
-    "vue-router": "^3.1.3"
+    "vue-router": "^3.1.3",
+    "vue2-hammer": "^2.1.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.11.0",
