--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "vue-material-design-icons": "^3.4.0",
     "vue-popperjs": "^2.1.0",
     "vue-router": "^3.1.3",
-    "vue2-hammer": "^2.1.2"
+    "vue2-hammer": "^2.1.2",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.11.0",
