--- a/server/package.json
+++ b/server/package.json
@@ -11,8 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "glob": "^7.1.4",
+    "jsonwebtoken": "^8.5.1",
     "nodemon": "^1.19.2"
   }
 }
