--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.22",
     "@fortawesome/free-solid-svg-icons": "^5.10.2",
     "@fortawesome/vue-fontawesome": "^0.1.7",
+    "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "popper.js": "^1.15.0",
     "vue": "^2.6.10",
