--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "core-js": "^2.6.5",
     "popper.js": "^1.15.0",
     "vue": "^2.6.10",
+    "vue-cookie": "^1.1.4",
+    "vue-cookies": "^1.5.13",
     "vue-material-design-icons": "^3.4.0",
     "vue-popperjs": "^2.1.0",
     "vue-router": "^3.1.3",
