--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/vue-fontawesome": "^0.1.7",
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
+    "hammerjs": "^2.0.8",
     "popper.js": "^1.15.0",
     "vue": "^2.6.10",
     "vue-cookie": "^1.1.4",
